# ENGC68

./: .gitmodules  Dockerfile  README.md  build.sh  entrypoint.sh  install_driver.sh  run_container.sh
.devcontainer/: Dockerfile  entrypoint.sh
ATVD-3_ws/: Dockerfile  build.sh  entrypoint.sh  readme.md  run_container.sh
ATVD-3_ws/bags/: ATVD3 - Plots
ATVD-3_ws/devel/: .catkin  local_setup.sh  setup.sh
ATVD-4_ws/: readme.md
ATVD-4_ws/bags/: Teste1.bag  Teste2.bag  Teste3.bag  Teste4.bag  Teste5.bag
ATVD-4_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ATVD-4_ws/src/comparison/: CMakeLists.txt
ATVD-5_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ATVD-6_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ATVD-6_ws/src/point_stabilizer/: CMakeLists.txt
ATVD-6_ws/tf_tree/: frames.gv
ATVD-7_ws/: readme.md
ATVD-7_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ATVD-7_ws/src/amcl_comparer/: CMakeLists.txt  package.xml
ATVD-7_ws/src/point_stabilizer/: package.xml
IBVS_ws/: Dockerfile  build.sh  entrypoint.sh  run_container.sh  testnode.cpp
IBVS_ws/realsense2_description/urdf/: _d435.urdf.xacro
IBVS_ws/src/ibvs_projeto/: CMakeLists.txt  package.xml
omnirobot_ws/: Dockerfile  build.sh  run_container.sh
omnirobot_ws/src/omnirobot/: README.md
omnirobot_ws/src/test/: model.sdf  model_orig.sdf
src/mybot_description/: CMakeLists.txt  package.xml
src/mybot_description/launch/: description.launch
src/mybot_description/urdf/: mybot.urdf  (+1 more)
src/omnirobot/: CMakeLists.txt  package.xml
src/omnirobot/launch/: teleop-omni.launch  teleop-twist.launch  urdf_gazebo_view.launch  urdf_rviz_view.launch  vel_Publisher.launch  velocity_controller.launch
src/omnirobot/scripts/: teleop_omni.py  teleop_omni3.py  teleop_twist_keyboard.py  vel_Publisher.py
src/omnirobot/urdf/: main.urdf.xacro  rim.urdf.xacro
src/test/: model.config
(+163 files in other folders)
